# descend

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  ascend_plan.md  build.rs  hivm.md
.cargo/: config.toml
.github/workflows/: rust.yml
descend_derive/: Cargo.toml  build.rs
descend_derive/src/: lib.rs
examples/: add.desc  kernel_call.desc  shrd_mem_acc_equiv_exec.desc  simple.desc
examples/core/: assign.desc  assign.desc.off  binop.desc  cpu_memory_allocation.desc  func.desc  func_params.desc  gpu_mem.desc.off  lazy_load_ub.desc  lazy_load_ub.desc.off  lit.desc  load_ub.desc.off  load_ub_twice.desc.off  vadd.desc  vdiv.desc  vdiv.desc.off  vec_add.desc  vec_add.desc.off  vec_add_1.desc.off  vec_add_2_ops.desc  vec_add_2_ops.desc.off  vec_add_4.desc.off  vec_add_threads_sched.desc  vec_add_threads_sched.desc.off  vmul.desc  vmul.desc.off
examples/error-examples/: assign_to_shared_ref.desc.off  invalid_type_add.desc  missing_main.desc  parse_error.desc  thread_idx_offset.desc  thread_idx_offset.desc.off  vec_add_memory_issue.desc.off  write_data_race.desc.off
examples/infer/: bfs.desc  jacobisvd.desc  matmul.desc  reduce_shared_mem.desc  reverse_vec.desc  scale_vec.desc  scan.desc  sgemm.desc  sssp-ffi.desc  transpose.desc  transpose_shrd_mem.desc  tree_reduce.desc  vec_add.desc  vec_add_hivm.desc
examples/rodinia/: gaussian.desc
examples/simple/: for_loop.desc  if.desc  if_else.desc  ref_deref.desc  test_no_main.desc  unit.desc
examples/softmax/: hivm.desc  simple.desc  standard.desc
scripts/: update-dialect-paths.sh
src/: .lib.rs.swp  error.rs  lib.rs  main.rs
src/ast/: internal.rs  mod.rs  printer.rs  span.rs  utils.rs  visit.rs  visit_mut.rs
src/codegen/: mod.rs
src/codegen/ascend/: mod.rs
src/parser/: mod.rs  source.rs
src/ty_check/: borrow_check.rs  ctxs.rs  error.rs  exec.rs  infer_kinded_args.rs  mod.rs  pl_expr.rs  pre_decl.rs  subty.rs  unify.rs
tests/: cuda.rs  error_examples.rs  example_infer_apps.rs  mlir.rs  rodinia.rs
tests/cuda/: core.rs  error_examples.rs  infer.rs  rodinia.rs  simple.rs  softmax.rs
tests/mlir/: core.rs  error_examples.rs  simple.rs
(+104 files in other folders)
