[package]
name = "descend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
melior = { version = "0.25", features = ["ods-dialects"] }
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
thiserror = "2.0.17"
peg = "0.8.5"
descend_derive = { path = "./descend_derive" }

[dev-dependencies]
insta = { version = "1.43.2", features = ["glob"] }

[workspace]
members = ["descend_derive"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = [
    "Luca Carlig <luca.carlig@huawei.com>",
    "Köpcke <bastian.koepcke@uni-muenster.de>",
]
edition = "2024"
