[package]
name = "descend_derive"
version = "0.1.0"
authors = ["Köpcke <bastian.koepcke@wwu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[build-dependencies]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
include_dir = "0.7"